Fixed Alignment of the code

--- a/Style.css
+++ b/Style.css
@@ -16,6 +16,14 @@ nav {
 }
 
 .wrapper {
+    max-width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+.wrapperUnderHeader {
     margin: 0, auto;
     width: 1000px;
 }
@@ -32,24 +40,24 @@ nav {
     color: white;
 }
 
-.welcome-txt a {
-    border: 1px solid white;
-    padding: 10px 25px;
-    text-decoration: none;
-    font-size: 14px;
-    margin-top: 20px;
-    display: block;
-    color: white;
-}
-
-    .welcome-txt a:hover {
-        background: white;
-        color: black;
+    .welcome-txt a {
+        border: 1px solid white;
+        padding: 10px 25px;
+        text-decoration: none;
+        font-size: 14px;
+        margin-top: 20px;
+        display: block;
+        color: white;
     }
 
-.quotes{
-    font-family:'Comic Sans MS';
-    color:coral;
+        .welcome-txt a:hover {
+            background: white;
+            color: black;
+        }
+
+.quotes {
+    font-family: 'Comic Sans MS';
+    color: coral;
 }
 
 .StaffImgAJ {
@@ -77,75 +85,72 @@ nav {
     background-repeat: no-repeat;
 }
 
-.StaffImgN:hover {
-    width: 300px;
-    height: 200px;
-    
-    background-image:url(Image/Nathon2.JPG);
-}
+    .StaffImgN:hover {
+        width: 300px;
+        height: 200px;
+        background-image: url(Image/Nathon2.JPG);
+    }
 
-ul{
+ul {
     margin-left: 0px;
 }
 
-ul li{
-    list-style:none;
-    display: inline-block;
-    float:right;
-    line-height: 100px;
-}
-
-ul li a {
-    display: block;
-
-    padding: 6px;
-    border-style: solid;
-    border-width: 2px;
-    border-color: #303fe1;
-    border-radius: 4px;
-    background-color: #303fe1;
-    -webkit-transition: border-color 300ms ease, color 300ms cubic-bezier(.23, 1, .32, 1), background-color 300ms ease;
-    transition: border-color 300ms ease, color 300ms cubic-bezier(.23, 1, .32, 1), background-color 300ms ease;
-    /*font-family: 'Space Grotesk', sans-serif;*/
-    color: #fff;
-    font-size: 14px;
-    line-height: 22px;
-    font-weight: 700;
-    text-align: center;
-    letter-spacing: 0.4px;
-    text-decoration: none;
-    text-transform: capitalize;
-}
-
-    ul li a:hover {
-        border-color: #fff;
-        background-color: #fff;
-        color: #303fe1 !important;
+    ul li {
+        list-style: none;
+        display: inline-block;
+        float: right;
+        line-height: 100px;
     }
 
-logo{
-    left:80px;
-    top:20px;
+        ul li a {
+            display: block;
+            padding: 6px;
+            border-style: solid;
+            border-width: 2px;
+            border-color: #303fe1;
+            border-radius: 4px;
+            background-color: #303fe1;
+            -webkit-transition: border-color 300ms ease, color 300ms cubic-bezier(.23, 1, .32, 1), background-color 300ms ease;
+            transition: border-color 300ms ease, color 300ms cubic-bezier(.23, 1, .32, 1), background-color 300ms ease;
+            /*font-family: 'Space Grotesk', sans-serif;*/
+            color: #fff;
+            font-size: 14px;
+            line-height: 22px;
+            font-weight: 700;
+            text-align: center;
+            letter-spacing: 0.4px;
+            text-decoration: none;
+            text-transform: capitalize;
+        }
+
+            ul li a:hover {
+                border-color: #fff;
+                background-color: #fff;
+                color: #303fe1 !important;
+            }
+
+logo {
+    left: 80px;
+    top: 20px;
 }
 
-grid{
+grid {
     display: grid;
-    grid-template-columns:50%;
+    grid-template-columns: 50%;
 }
 
-    .grid td {
-        padding: 10px;
-        border: 1px solid #c1c1c1;
-        color: #444;
-        font-size: 1em;
-    }
+.grid td {
+    padding: 10px;
+    border: 1px solid #c1c1c1;
+    color: #444;
+    font-size: 1em;
+}
 
-    .grid th {
-        padding: 4px 2px;
-        color: #707083;
-        text-shadow: 1px 1px 0px #ffffff;
-        
-        border: 1px solid #c1c1c1;
-        font-size: 1em;
-        text-align: center;
-    }
+.grid th {
+    padding: 4px 2px;
+    color: #707083;
+    text-shadow: 1px 1px 0px #ffffff;
+    border: 1px solid #c1c1c1;
+    font-size: 1em;
+    text-align: center;
+}
